--- a/latex/xCJK/xCJK.tex
+++ b/latex/xCJK/xCJK.tex
@@ -2,10 +2,12 @@
 
 \usepackage{CJK}
 \usepackage{xeCJK}
-\setCJKmainfont{BiauKai}
+\setCJKmainfont{BiauKai:script=hani:language=ZHT:vertical:+vert}
+\font\songv="BiauKai:script=hani:language=ZHT:vertical:+vert"
 \begin{document}
 \begin{CJK}{UTF8}{}
 
+%{\songv中文測試}
 中文測試
 
 \end{CJK}
