--- a/latex/change_fonts.tex
+++ b/latex/change_fonts.tex
@@ -3,13 +3,19 @@
 \setromanfont{LiHei Pro} % 儷黑Pro
 %\setromanfont{BiauKai} % 標楷體
 \newfontfamily{\K}{BiauKai}
+\newfontfamily{\kaiv}{BiauKai:script=hani:language=ZHT:vertical:+vert}
 \setmonofont[Scale=0.8]{Courier New} % 等寬字型
 \XeTeXlinebreaklocale "zh"
 \XeTeXlinebreakskip = 0pt plus 1pt
 
+
+
+\input{xx}
 \begin{document}
 
-在Mac下的XeTeX裡寫中文~{\K 標楷體}~儷黑體
+在Mac下的XeTeX裡寫中文~{\K 標楷體}~儷黑體{\kaiv 直式標楷}
+%\fontsize{14}{14}\selectfont
+\titleCH
 
 \end{document}
 
